# qPCRtools_cpp

./: .gitignore  CMakeLists.txt  CREATE_RELEASE_GUIDE.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  PROGRESS.md  QUICKSTART.md  QUICKSTART_RELEASE.md  QUICKSTART_UPLOAD.md  README.md  STATUS.md  WINDOWS_BUILD.md  build_local.sh  build_windows.bat  fix_helper_app.sh  fix_helper_final.sh  vcpkg.json
.github/workflows/: build.yml
examples/: README.md  cq.csv  design.csv
include/Core/: ExpressionCalculator.h  StandardCurve.h  StatisticalTest.h
include/Data/: CSVParser.h  DataFrame.h  ExcelImporter.h
include/GUI/: ConfigPage.h  ImportPage.h  MainWindow.h  ResultsPage.h  WebBridge.h  WebMainWindow.h
include/Utils/: GgplotTheme.h
macos/: Info.plist
scripts/: README.md  create_friendly_dmg.sh  create_release.sh  fix_signature.sh  install_to_applications.sh  macos_deploy.sh  package.sh  run_with_logs.sh  upload_dmg_to_github.sh  upload_to_github.sh
src/: main.cpp  main_simple.cpp
src/Core/: ExpressionCalculator.cpp  StandardCurve.cpp  StatisticalTest.cpp
src/Data/: CSVParser.cpp  DataFrame.cpp  ExcelImporter.cpp
src/GUI/: ConfigPage.cpp  ImportPage.cpp  MainWindow.cpp  ResultsPage.cpp  WebBridge.cpp  WebMainWindow.cpp
src/Utils/: GgplotTheme.cpp
web/: calsc.cq.txt  calsc.info.txt  index.html
web/css/: style.css
web/images/: README.txt
web/js/: app.js  i18n.js
